#30 fixed hamburger menu mid line position on IE and Edge

--- a/css/navigation-side.css
+++ b/css/navigation-side.css
@@ -233,6 +233,7 @@
     }
     
     .navMenuButtonContent hr:nth-child(2) {
+        margin-right: 15%;
         width: 85%;
     }
 
